navigation mobile fix

--- a/assets/sass/_default/layouts/_header.sass
+++ b/assets/sass/_default/layouts/_header.sass
@@ -25,14 +25,13 @@ header[role="banner"]
             @include media-breakpoint-down(lg)
                 height: 30px
 
-    nav[role="navigation"]
-        button[type="button"]
-            color: white
-
-    &:not(.is-sticky)
-        background-color: $site-color
-
-
     &.is-sticky
         .logo img
             filter: invert(1)
+
+    &:not(.is-sticky)
+        background-color: $site-color
+        nav[role="navigation"]
+            button[type="button"]
+                html:not(.is-menu-open) &
+                    color: white
